Move all AI API calls to server-side Netlify function
- Create netlify/functions/generate.ts to handle all AI API calls server-side
- Remove all VITE_* environment variable references from client code
- Update geminiService.ts to call Netlify function instead of direct API calls
- API keys now stored securely on server (GEMINI_API_KEY, OPENAI_API_KEY)
- Add CORS headers to Netlify function
- Update SettingsView to check API key status via function
- Remove API key input fields (keys managed via Netlify env vars only)
- Update documentation (README.md, NETLIFY_SETUP.md) with new setup instructions
- Remove vite.config.ts polyfill for API_KEY (no longer needed)
- Install @netlify/functions package

Security: API keys are no longer exposed in client-side bundle

--- a/netlify.toml
+++ b/netlify.toml
@@ -9,7 +9,6 @@
 
 [build.environment]
   NODE_VERSION = "20"
-  # Disable secrets scanning for expected API keys in build output
-  # These are client-side API keys that need to be in the bundle
+  # API keys are now server-side only, so secrets scanning should not find them in build output
   SECRETS_SCAN_SMART_DETECTION_OMIT_VALUES = "true"
 
